// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should enable postcss-url if options.url is true 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
    ],
    Array [
      "postcss-mixins",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;

exports[`should pass options.browsers to postcss-cssnext  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": "foo",
          "remove": false,
        },
        "browsers": "foo",
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;

exports[`should pass options.import to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      "foo",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;

exports[`should pass options.mixins to postcss-mixins  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      "foo",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;

exports[`should pass options.url to postcss-url 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "foo": "bar",
      },
    ],
    Array [
      "postcss-mixins",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
  ],
}
`;
